--- a/main.html
+++ b/main.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <title>LocalStorage</title>
   <link rel="stylesheet" href="style.css">
+  <script src="script.js"></script>
 </head>
 <body>
   <!--
@@ -28,7 +29,7 @@
 <script>
   const addItems = document.querySelector('.add-items');
   const itemsList = document.querySelector('.plates');
-  const items = [];
+  const items =  JSON.parse(localStorage.getItem('items')) || [];
 
 </script>
 
